force-app/main/default/objects/Contact/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <label>Email Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>