force-app/main/default/objects/Contact/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresher</fullName>
            </value>
            <value>
                <fullName>0 months</fullName>
            </value>
            <value>
                <fullName>0-6 months</fullName>
            </value>
            <value>
                <fullName>1 years</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>5-8 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>