force-app/main/default/objects/Contact/recordTypes/Fresher.recordType-meta.xml
<RecordType>
    <fullName>Fresher</fullName>
    <active>true</active>
    <label>Fresher</label>
</RecordType>